@@ -2,6 +2,12 @@ CruiseControl Release Notes
 
 Changes listed by release, then alphabetically.
 
+CruiseControl Release Notes - Latest CVS
+
+CruiseControlItem
+----------------------
+* Sort items by time and then by file name. Patch by Jerome Lacoste
+
 CruiseControl Release Notes - 2.3.0.1
 
 CruiseControlItemTest
